syntax = 'proto3';

package shared.match.opponent;

message AliveData {
    int32 playersAlive = 1;
}
